[package]
name = "peng_quad"
version = "0.4.0"
edition = "2021"
rust-version = "1.76"
authors = ["Yang Zhou <yangzhou.info@gmail.com>"]
description = "Peng is a minimal quadrotor pipeline including quadrotor dynamics, IMU simulation, various trajectory planners, PID controller and depth map rendering."
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/peng_quad/latest/peng_quad"
homepage = "https://github.com/makeecat/Peng"
repository = "https://github.com/makeecat/Peng"
categories = [
    "science::robotics",
    "aerospace::simulation",
    "aerospace::unmanned-aerial-vehicles",
    "algorithms",
]
keywords = ["quadrotor", "quadcopter", "robotics", "drone", "simulation"]
readme = "README.md"

[dependencies]
nalgebra = "0.33.0"
rand = "0.8.5"
rand_distr = "0.4.3"
rerun = "0.18.2"
ndarray = "0.15.6"
thiserror = "1.0.63"
serde = { version = "1.0.209", features = ["derive"] }
serde_yaml = "0.9.34"
env_logger = "0.11.5"
log = "0.4.22"
