[package]
name = "peng_quad"
version = "0.4.1"
edition = "2021"
rust-version = "1.76"
authors = ["Yang Zhou <yangzhou.info@gmail.com>"]
description = "Peng is a minimal quadrotor pipeline including quadrotor dynamics, IMU simulation, various trajectory planners, PID controller and depth map rendering."
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/peng_quad/latest/peng_quad"
homepage = "https://github.com/makeecat/Peng"
repository = "https://github.com/makeecat/Peng"
categories = [
    "science::robotics",
    "aerospace::simulation",
    "aerospace::unmanned-aerial-vehicles",
    "algorithms",
]
keywords = ["quadrotor", "quadcopter", "robotics", "drone", "simulation"]
readme = "README.md"

[profile.dev]
opt-level = 1 # Enable a small amount of optimization in the dev profile.
[profile.dev.package."*"]
opt-level = 3 # Enable a large amount of optimization in the dev profile for dependencies.
[profile.release]
codegen-units = 1 # Compile the entire crate as one unit.
lto = "thin"      # Do a second optimization pass over the entire program, including dependencies.
[dependencies]
nalgebra = "0.33.0"
rand = "0.8.5"
rand_distr = "0.4.3"
rerun = "0.18.2"
thiserror = "1.0.63"
serde = { version = "1.0.209", features = ["derive"] }
serde_yaml = "0.9.34"
env_logger = "0.11.5"
log = "0.4.22"
